--- a/templates/base.html
+++ b/templates/base.html
@@ -9,10 +9,8 @@
     <script src="https://unpkg.com/jquery"></script>
     <script src="https://unpkg.com/popper"></script>
     <script src="https://unpkg.com/bootstrap"></script>
-
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css">
     <link rel="stylesheet" href="/static/styles.css">
-    <link rel="shortcut icon" href="/static/favicon.ico">
 </head>
 
 <body class="{% block body_class %}{% endblock %}">
@@ -20,8 +18,8 @@
         <div class="container-fluid">
             <div class="navbar-header">
                 <a href="/" class="navbar-brand">
-                    <img src="ICON GOES HERE" alt="logo">
-                    <span>PLANT THINGIE</span>
+                    <img src="/static/leaf_icon.png" alt="logo" class='icon'>
+                    <span>PLANT PIN MAP</span>
                 </a>
             </div>
             <ul class="nav navbar-nav navbar-right">
@@ -31,7 +29,7 @@
                 {% else %}
                 <li>
                     <a href="/users/{{ g.user.id }}">
-                        <img src="{{ g.user.image_url }}" alt="{{ g.user.username }}">
+                        {{ g.user.username }}
                     </a>
                 </li>
                 <li><a href="/logout">Log out</a></li>
@@ -49,5 +47,6 @@
 
     </div>
 </body>
+{%block scripts%}{%endblock%}
 
 </html>
