--- a/templates/users/login.html
+++ b/templates/users/login.html
@@ -1,12 +1,11 @@
 {% extends 'base.html' %}
 
-{% block body_class %}onboarding{% endblock %}
-
 {% block content %}
 
 <div class="row justify-content-md-center">
     <div class="col-md-7 col-lg-5">
-        <h2 class="join-message">Welcome back.</h2>
+        <p>
+        <h2 class="join-message">Welcome back</h2>
 
         <form method="POST" id="user_form">
             {{ form.hidden_tag() }}
@@ -15,11 +14,12 @@
             {% for error in field.errors %}
             <span class="text-danger">{{ error }}</span>
             {% endfor %}
-            {{ field(placeholder=field.label.text, class="form-control") }}
+            <p>{{ field(placeholder=field.label.text, class="form-control") }}</p>
             {% endfor %}
 
             <button class="btn btn-primary btn-block btn-lg">Log in</button>
         </form>
+        </p>
     </div>
 </div>
 
