--- a/templates/users/signup.html
+++ b/templates/users/signup.html
@@ -14,7 +14,7 @@
             {% for error in field.errors %}
             <span class="text-danger">{{ error }}</span>
             {% endfor %}
-            {{ field(placeholder=field.label.text, class="form-control") }}
+            <p>{{ field(placeholder=field.label.text, class="form-control") }}</p>
             {% endfor %}
 
             <button class="btn btn-primary btn-lg btn-block">Sign up!</button>
