small styling and map changes

--- a/templates/maps/view_map.html
+++ b/templates/maps/view_map.html
@@ -50,11 +50,14 @@
             {% endblock %}
 
         </div>
-        <p id="map_info">
 
+        <p>
         <form class='submit_form'>Input an address: <input type="text" class="location_input"></input><button
                 class="submit_location_button">Submit</button></form>
         </p>
+
+        <p id="map_info"></p>
+
 
         <div style="width: 80vw;height: 80vh;" id="mapContainer">
         </div>
