--- a/templates/maps/single_pin.html
+++ b/templates/maps/single_pin.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>HERE Map with Custom Marker</title>
+    <title>Pin Plants</title>
     <link rel="stylesheet" href="https://unpkg.com/bootstrap/dist/css/bootstrap.css">
     <script src="https://unpkg.com/bootstrap"></script>
     <link rel="stylesheet" href="/static/styles.css">
