--- a/templates/home-anon.html
+++ b/templates/home-anon.html
@@ -1,7 +1,8 @@
 {% extends 'base.html' %}
 {% block content %}
 <div class="home-hero">
-    <p>Sign up now!</p>
+    <p>Sign up or log in!</p>
     <a href="/signup" class="btn btn-primary">Sign up</a>
+    <a href="/login" class="btn btn-primary">Log in</a>
 </div>
 {% endblock %}
